--- a/client/main.html
+++ b/client/main.html
@@ -10,6 +10,8 @@
 <script src="https://use.fontawesome.com/c130fc509f.js"></script>
 </head>
 <body>
+<!--Muy  bien hecho este recurso, funciona muy bien cuando se demoran los partidos-->
+
   <div class="loading">
     <img src="img/Soccerball.gif" id="centro" alt="Page Loading">
     <h1>Los partidos están cargando..</h1>
